# sitewise

./: .dockerignore  .gitignore  AGENTS.md  README.md
backend/: .env.example  AGENTS.md  pyproject.toml  sitecustomize.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_ingest_metadata.py  003_sitewise_projects_and_drafts.py  004_workspace_files.py  005_polar_billing.py  006_cockpit_refresh_indexes.py  007_tender_core.py  007_tender_knowledge.py  008_tender_knowledge.py  009_tender_mapping_status.py  010_tender_jobs_eval.py  016_stripe_billing.py  (+28 more)
backend/app/: config.py  logging.py  main.py  tender_worker.py  workflow_worker.py
backend/ingest/: __init__.py  __main__.py  chunk.py  classify.py  db.py  discover.py  document_metadata.py  drawing_parse.py  embed.py  extract.py  frontmatter.py  hashing.py  hosted.py  ids.py  metadata.py  persist.py  pipeline.py  platform.py  router.py  sanitize.py  types.py
backend/scripts/: audit_evidence_identity.py  backfill_artefact_exports.py  backfill_quote_totals.py  debug_chat.py  import_legacy_cost_plans.py  phase5_acceptance.py  repair_evidence_identity.py  reset_corpus.py
backend/tender/: __init__.py  models.py  router.py  schemas.py  worker.py
backend/tests/: conftest.py  test_chat_api.py  test_chat_messages.py  test_config.py  test_main_lifespan.py  test_project_cockpit_bootstrap.py  test_project_decisions_api.py  test_project_draft_versioning.py  test_project_evidence.py  test_project_profile_contracts.py  test_project_taxonomy_api.py  test_sitecustomize.py  test_storage_resilience.py
(+1020 files in other folders)
