[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clerk-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "greenlet>=3.2.4",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.41.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.106.0",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "structlog>=26.1.0",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
    "pymupdf==1.27.2.3",
    "mammoth==1.12.0",
    "tiktoken==0.13.0",
    "openpyxl==3.1.5",
    "jinja2==3.1.6",
    "weasyprint==69.0",
    "pillow==12.2.0",
    "opendataloader-pdf[hybrid]==2.4.7",
    "fastmcp==3.4.2",
    "stripe==15.3.0",
]

[tool.uv]
add-bounds = "exact"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "ingest", "tender"]

[tool.pytest.ini_options]
addopts = "-m 'not integration and not tender_eval'"
markers = [
    "integration: marks tests that require live external services",
    "tender_eval: marks Tender Comparison Module golden-set evaluation tests",
]
